Finish reimplement user api
