# swagger.yaml
@@ -1,255 +1,249 @@
 swagger: '2.0'
 info:
-  description: API for using in AskBid project
-  version: 1.0.0
-  title: AskBid API
+    description: API for using in AskBid project
+    version: 1.0.0
+    title: AskBid API
 host: localhost:5000
 tags:
-- name: item
-  description: Everything about Item
-- name: user
-  description: Operations about User
+    - name: item
+      description: Everything about Item
+    - name: user
+      description: Operations about User
 schemes:
-- http
-- https
+    - http
+    - https
 paths:
-  /item/get_all_items:
-    get:
-      tags:
-      - item
-      summary: Get all items
-      description: Returns items sorted by name
-      operationId: getAllItems
-      produces:
-      - application/json
-      parameters: []
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: "array"
-            items:
-              $ref: '#/definitions/Item'
-  /item/get_new_items:
-    get:
-      tags:
-      - item
-      summary: Get all items
-      description: Returns items sorted by released date
-      operationId: getNewItems
-      produces:
-      - application/json
-      parameters: []
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: "array"
-            items:
-              $ref: '#/definitions/Item'
-  /item/get_popular_items:
-    get:
-      tags:
-      - item
-      summary: Get all items
-      description: Returns items sorted by popularity
-      operationId: getPopularItems
-      produces:
-      - application/json
-      parameters: []
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: "array"
-            items:
-              $ref: '#/definitions/Item'
-  /item/get_detail_item/{id}:
-    get:
-      tags:
-      - item
-      summary: Get detail of an item
-      description: Returns a single item
-      operationId: getDetailItem
-      produces:
-      - application/json
-      parameters:
-      - name: id
-        in: path
-        description: ID of item to return
-        required: true
-        type: integer
-        format: int64
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: "array"
-            items:
-              $ref: '#/definitions/Item'
-  /item/search_items:
-    post:
-      tags:
-      - item
-      summary: Search for items
-      description: Returns all the matching items
-      operationId: searchItems
-      produces:
-      - application/json
-      parameters:
-      - name: state
-        in: body
-        description: Some details of items
-        type: object
-        properties:
-          text:
-            type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Item'
-  /user/sign_up:
-    post:
-      tags:
-      - user
-      summary: Sign Up
-      description: Users want to sign up
-      operationId: signUp
-      produces:
-      - application/json
-      parameters:
-      - name: state
-        in: body
-        description: Information of a user
-        type: object
-        properties:
-          fullName:
-            type: string
-          email:
-            type: string
-          password:
-            type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
-        409:
-          description: The request could not be completed due to a conflict with the current state.
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
-  /user/sign_in:
-    post:
-      tags:
-      - user
-      summary: Sign In
-      description: Users want to sign in
-      operationId: signIn
-      produces:
-      - application/json
-      parameters:
-      - name: state
-        in: body
-        description: Information of a user
-        type: object
-        properties:
-          email:
-            type: string
-          password:
-            type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
-              token:
-                type: string
-              userID:
-                type: integer
-        401:
-          description: Authorization information is missing or invalid.
-          schema:
-            type: object
-            properties:
-              status:
-                type: string
+    /item/get_all_items:
+        get:
+            tags:
+                - item
+            summary: Get all items
+            description: Returns items sorted by name
+            operationId: getAllItems
+            produces:
+                - application/json
+            parameters: []
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: 'array'
+                        items:
+                            $ref: '#/definitions/Item'
+    /item/get_new_items:
+        get:
+            tags:
+                - item
+            summary: Get all items
+            description: Returns items sorted by released date
+            operationId: getNewItems
+            produces:
+                - application/json
+            parameters: []
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: 'array'
+                        items:
+                            $ref: '#/definitions/Item'
+    /item/get_popular_items:
+        get:
+            tags:
+                - item
+            summary: Get all items
+            description: Returns items sorted by popularity
+            operationId: getPopularItems
+            produces:
+                - application/json
+            parameters: []
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: 'array'
+                        items:
+                            $ref: '#/definitions/Item'
+    /item/get_detail_item/{id}:
+        get:
+            tags:
+                - item
+            summary: Get detail of an item
+            description: Returns a single item
+            operationId: getDetailItem
+            produces:
+                - application/json
+            parameters:
+                - name: id
+                  in: path
+                  description: ID of item to return
+                  required: true
+                  type: integer
+                  format: int64
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: 'array'
+                        items:
+                            $ref: '#/definitions/Item'
+    /item/search_items:
+        post:
+            tags:
+                - item
+            summary: Search for items
+            description: Returns all the matching items
+            operationId: searchItems
+            produces:
+                - application/json
+            parameters:
+                - name: state
+                  in: body
+                  description: Some details of items
+                  type: object
+                  properties:
+                      text:
+                          type: string
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: array
+                        items:
+                            $ref: '#/definitions/Item'
+    /user/sign_up:
+        post:
+            tags:
+                - user
+            summary: Sign Up
+            description: Users want to sign up
+            operationId: signUp
+            produces:
+                - application/json
+            parameters:
+                - name: state
+                  in: body
+                  description: Information of a user
+                  type: object
+                  properties:
+                      fullName:
+                          type: string
+                      email:
+                          type: string
+                      password:
+                          type: string
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: string
+                409:
+                    description: The request could not be completed due to a conflict with the current state.
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: string
+    /user/sign_in:
+        post:
+            tags:
+                - user
+            summary: Sign In
+            description: Users want to sign in
+            operationId: signIn
+            produces:
+                - application/json
+            parameters:
+                - name: state
+                  in: body
+                  description: Information of a user
+                  type: object
+                  properties:
+                      email:
+                          type: string
+                      password:
+                          type: string
+            responses:
+                200:
+                    description: successful operation
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: string
+                            token:
+                                type: string
+                            userID:
+                                type: integer
+                401:
+                    description: Authorization information is missing or invalid.
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: string
 definitions:
-  Item:
-    type: object
-    properties:
-      ItemID:
-        type: integer
-        format: int64
-      ItemImage:
-        type: string
-        description: Image path of an item
-      ItemBrand:
-        type: string
-        description: Brand of an item
-      ItemDesc: 
-        type: string
-        description: Description of an item
-      ItemColor:
-        type: string
-        description: Color of an item
-      ItemReleased:
-        type: string
-        format: date-time
-      ItemClicked:
-        type: integer
-        format: int64
-  User:
-    type: object
-    properties:
-      UserID:
-        type: integer
-        format: int64
-      FullName:
-        type: string
-        description: Full name of a user
-      IDCard:
-        type: string
-        description: ID card of a user
-      Email: 
-        type: string
-        description: Email of a user
-      Password:
-        type: string
-        description: Password of a user
-      Address:
-        type: string
-        description: Address of a user
-      Tel:
-        type: string
-        description: Mobile number of a user
-      Balance:
-        type: double
-        description: Balance of a user
-      BankNo:
-        type: string
-        description: Bank account number of a user
-      Verified:
-        type: integer
-        format: int32
-        description: Verify status of a user
-      Salt:
-        type: string
-        description: Salt text of a user
-      
-        
-      
-
-
-
+    Item:
+        type: object
+        properties:
+            ItemID:
+                type: integer
+                format: int64
+            ItemImage:
+                type: string
+                description: Image path of an item
+            ItemBrand:
+                type: string
+                description: Brand of an item
+            ItemDesc:
+                type: string
+                description: Description of an item
+            ItemColor:
+                type: string
+                description: Color of an item
+            ItemReleased:
+                type: string
+                format: date-time
+            ItemClicked:
+                type: integer
+                format: int64
+    User:
+        type: object
+        properties:
+            UserID:
+                type: integer
+                format: int64
+            FullName:
+                type: string
+                description: Full name of a user
+            IDCard:
+                type: string
+                description: ID card of a user
+            Email:
+                type: string
+                description: Email of a user
+            Password:
+                type: string
+                description: Password of a user
+            Address:
+                type: string
+                description: Address of a user
+            Tel:
+                type: string
+                description: Mobile number of a user
+            Balance:
+                type: double
+                description: Balance of a user
+            BankNo:
+                type: string
+                description: Bank account number of a user
+            Verified:
+                type: integer
+                format: int32
+                description: Verify status of a user
+            Salt:
+                type: string
+                description: Salt text of a user
